feat - improvement bib39-dotmap words

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </tr>
     </table>
 
+    <script src="src/bip39_dotmap.js"></script>
     <script src="src/script.js"></script>
   </body>
 </html>
