fix - import bip39_dotmap file

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </table>
 
     <script type="module" src="src/bip39_dotmap.js"></script>
-    <script src="src/script.js"></script>
+    <script type="module" src="src/script.js"></script>
   </body>
 </html>
