feat - improve the search for the word

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </td>
         <td>
-          <input readonly type="text" id="word" name="word" />
+          <input type="text" id="word" name="word" />
         </td>
       </tr>
     </table>
