feat - improvement bip39 dotmap seed

--- a/index.html
+++ b/index.html
@@ -11,39 +11,16 @@
     <h3>Bip39 Dotmap</h3>
     <table>
       <tr>
+        <th>Seed</th>
         <th>Column1</th>
         <th>Column2</th>
         <th>Column3</th>
-        <th>Word</th>
       </tr>
       <tr>
         <td>
-          <div class="checkbox-group">
-            <input type="checkbox" id="col1box1" />
-            <input type="checkbox" id="col1box2" />
-            <input type="checkbox" id="col1box3" />
-            <input type="checkbox" id="col1box4" />
-          </div>
+          <textarea id="seed_dotmap"></textarea>
         </td>
-        <td>
-          <div class="checkbox-group">
-            <input type="checkbox" id="col2box1" />
-            <input type="checkbox" id="col2box2" />
-            <input type="checkbox" id="col2box3" />
-            <input type="checkbox" id="col2box4" />
-          </div>
-        </td>
-        <td>
-          <div class="checkbox-group">
-            <input type="checkbox" id="col3box1" />
-            <input type="checkbox" id="col3box2" />
-            <input type="checkbox" id="col3box3" />
-            <input type="checkbox" id="col3box4" />
-          </div>
-        </td>
-        <td>
-          <input type="text" id="word" name="word" />
-        </td>
+        <td colspan="3" id="dotmaps"></td>
       </tr>
     </table>
 
