docs - README.md

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <body>
     <h1>Bip39 obfuscator</h1>
 
+    <p>
+      Obfuscate your mnemonic phrase to save it discreetly.
+      You have two different methods:
+      <strong>"BIP39 Dotmap"</strong> and <strong>"BIP39 Colors"</strong>
+    </p>
+
     <h3>Bip39 Dotmap</h3>
     <table>
       <tr>
